; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/powerpc/extr_mach.c_PpcInit.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/powerpc/extr_mach.c_PpcInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CacheSizeLimit = common dso_local global i32 0, align 4
@ofproxy = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PpcInit(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  store i32 65536, i32* @CacheSizeLimit, align 4
  %3 = load i64, i64* %2, align 8
  store i64 %3, i64* @ofproxy, align 8
  %4 = call i32 (...) @PpcDefaultMachVtbl()
  %5 = load i64, i64* @ofproxy, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 (...) @PpcOfwInit()
  br label %11

9:                                                ; preds = %1
  %10 = call i32 (...) @PpcPrepInit()
  br label %11

11:                                               ; preds = %9, %7
  ret void
}

declare dso_local i32 @PpcDefaultMachVtbl(...) #1

declare dso_local i32 @PpcOfwInit(...) #1

declare dso_local i32 @PpcPrepInit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
